--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,8 @@ body {
 .container {
     margin: 0 auto;
     max-width: 300px;
+    color: bisque;
+    background-color: darkblue;
 }
 p {
     line-height: 2;
