--- a/style/style.css
+++ b/style/style.css
@@ -4,9 +4,15 @@ body {
 .container {
     margin: 0 auto;
     max-width: 300px;
-    color: bisque;
-    background-color: darkblue;
+    color: black;
+    
 }
 p {
     line-height: 2;
+}
+.poetry {
+  color:blanchedalmond;
+  text-align:center;
+  box-shadow:0 0 6px black;
+  background-color: darkblue;
 }
