--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body { 
     font-family: 'Roboto', sans-serif;
-    background-color: goldenrod;
+    background-color: gold;
 }
 .container {
     margin: 0 auto;
